# socratic_flashcards

./: Procfile  README.md  app.py  chainlit.md  demo_app.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
